# SoftEng2026

./: .gitignore  128195.diagram  2.session  67.session  CMakeLists.txt  README.md  SoftEng131143.prj  c++.html  classes.html  klasa_1.cpp  klasa_1.h  klasa_3.cpp  klasa_3.h  source code.html  test_sphere.cpp
.github/workflows/: main.yml
src/: Circle.cpp  Circle.h  Cone.h  Cylinder.h  Ellipse.h  Ellipsoid.h  Harmonogram.cpp  Harmonogram.h  Hexagon.h  MiejceDyzuru.cpp  MiejceDyzuru.h  Nauczyciel'.cpp  Nauczyciel'.h  Nieobecnosc.cpp  Nieobecnosc.h  Pyramid.h  Rectangle.h  ShapeParam.h  ShapeParamIndex.h  Sphere.h  Torus.h  Trapeze.h  Triangle.h  Zastepstwo.cpp  Zastepstwo.h
src/tests/: test_cylinder.cpp  test_performance.cpp
src/tests/smoke/: ellipse_test.cpp  test_circle.cpp  test_hex.cpp  test_rectangle.cpp  test_shape1.cpp  test_sphere.cpp  test_torus.cpp  test_trapeze.cpp  test_triangle.cpp
src/tests/unit/: test_ellipsoid.cpp
tmp2/: CMakeLists.txt
